--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-django
-sqlalchemy
-sqlalchemy_utils
-sqlahelper
-configobj
-psycopg2-binary
-django_jsonforms
-environs
+django==4.0
+sqlalchemy==1.4.28
+sqlalchemy_utils==0.37.9
+sqlahelper==1.0
+configobj==5.0.6
+psycopg2-binary==2.9.2
+django_jsonforms==1.1.2
+environs==9.3.5
