Staticfiles get collected in docker

--- a/compose/Dockerfile
+++ b/compose/Dockerfile
@@ -6,6 +6,9 @@ RUN apt-get update && \
         make \
         gcc
 
+RUN addgroup --system django \
+    && adduser --system --ingroup django django
+
 COPY requirements.txt /tmp/requirements.txt
 RUN pip install -r /tmp/requirements.txt
 
@@ -13,7 +16,15 @@ RUN apt-get remove -y --purge make gcc build-essential \
     && apt-get autoremove -y \
     && rm -rf /var/lib/apt/lists/*
 
-COPY ./ /app
-WORKDIR /app
+COPY ./compose/start /start
+RUN sed -i 's/\r$//g' /start
+RUN chmod +x /start
+RUN chown django /start
 
-CMD gunicorn meta_tool.wsgi --bind 0.0.0.0:80 --chdir=/app
+COPY ./ /app
+RUN chown -R django /app
+
+USER django
+
+WORKDIR /app
+RUN mkdir staticfiles
