--- a/production.yml
+++ b/production.yml
@@ -14,3 +14,11 @@ services:
     volumes:
     - ./config:/config
     command: /start
+    networks:
+    - caddy_network
+
+networks:
+  caddy_network:
+    external:
+      name: docker_caddy_network
+    
