--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 django==4.0
-sqlalchemy==1.4.28
+sqlalchemy==1.4.31
 sqlalchemy_utils==0.37.9
-sqlahelper==1.0
 configobj==5.0.6
 psycopg2-binary==2.9.2
 django_jsonforms==1.1.2
-environs==9.3.5
 gunicorn==20.1.0
+django-environ==0.8.1
